# pretty-assert

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
examples/: basic.py  pretty_eq.py  with_config.py
pretty_assert/: __init__.py
tests/: __init__.py  m.py
