[tool.poetry]
name = "pretty-assert"
version = "0.1.0"
description = ""
authors = ["lxl66566 <<lxl66566@gmail.com>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^2.4.0"
pprintpp = "^0.4.0"
icdiff = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
